add application apis and test
