# ssolib/models/role/app.go
@@ -87,29 +87,33 @@ func GetAppAdminRole(ctx *models.Context, appId int) (*Role, error) {
 func DeleteApp(ctx *models.Context, id int) ( error) {
 	tx := ctx.DB.MustBegin()
 	roles := []Role{}
-	err1 := ctx.DB.Select(&roles, "SELECT id FROM role WHERE app_id=?", id)
-	if err1 != nil {
-		return err1
+	err := ctx.DB.Select(&roles, "SELECT id FROM role WHERE app_id=?", id)
+	if err != nil {
+		return err
 	}
-	_, err2 := tx.Exec("DELETE FROM role WHERE app_id=?", id)
-	if err2 != nil {
-		return err2
+	_, err = tx.Exec("DELETE FROM role WHERE app_id=?", id)
+	if err != nil {
+		tx.Rollback()
+		return err
 	}
-	_, err3 := tx.Exec("DELETE FROM resource WHERE app_id=?", id)
-	if err3 != nil {
-		return err3
+	_, err = tx.Exec("DELETE FROM resource WHERE app_id=?", id)
+	if err != nil {
+		tx.Rollback()
+		return err
 	}
 	for _,r := range roles {
 		if IsLeafRole(ctx, r.Id) {
 			_, err := tx.Exec("DELETE FROM role_resource WHERE role_id=?", id)
 			if err != nil {
+				tx.Rollback()
 				return err
 			}
 		}
 	}
-	_, err4 := tx.Exec("DELETE FROM app WHERE id=?", id)
-	if err4 != nil {
-		return err4
+	_, err = tx.Exec("DELETE FROM app WHERE id=?", id)
+	if err != nil {
+		tx.Rollback()
+		return err
 	}
 	log.Debug(roles)
 	for _,r := range roles {
@@ -123,9 +127,9 @@ func DeleteApp(ctx *models.Context, id int) ( error) {
 			panic(err)
 		}
 	}
-	if err5 := tx.Commit(); err5 != nil {
-		log.Debug(err5)
-		return err5
+	if err := tx.Commit(); err != nil {
+		log.Debug(err)
+		return err
 	}
 	return nil
 }
